@@ -40,6 +40,8 @@ AUTOMAKE_OPTIONS = dejagnu
 DEJATOOL = hammer
 
 AM_RUNTESTFLAGS = HAMMER=$(srcdir)/hammer
+
+EXTRA_DIST = hammer hammer.test/hammer.exp
 END
 
 mkdir hammer.test
