@@ -47,6 +47,9 @@ AUTOMAKE_OPTIONS = dejagnu
 DEJATOOL = hammer spanner
 
 AM_RUNTESTFLAGS = HAMMER=$(srcdir)/hammer SPANNER=$(srcdir)/spanner
+
+EXTRA_DIST  = hammer  hammer.test/hammer.exp
+EXTRA_DIST += spanner spanner.test/spanner.exp
 END
 
 mkdir hammer.test
