@@ -38,9 +38,10 @@ chmod +x $package
 
 echo AC_OUTPUT >> configure.in
 
-cat > Makefile.am << 'END'
+cat > Makefile.am << END
 AUTOMAKE_OPTIONS = dejagnu
 
+EXTRA_DIST = $package $package.test/$package.exp
 END
 
 echo "AM_RUNTESTFLAGS = PACKAGE=\$(srcdir)/$package" >> Makefile.am
