@@ -1,3 +1,8 @@
+2003-04-18  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/dejagnu3.test, tests/dejagnu4.test, tests/dejagnu5.test:
+	Distribute dejagnu test cases, so that distcheck actually runs them.
+
 2003-04-18  Richard Dawe  <rich@phekda.freeserve.co.uk>
 
 	* lib/am/dejagnu.am (site.exp): Don't define tool in site.exp,
